<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TTW</string>
    <string name="action_settings">Settings</string>
    <string name="discard">Cancel</string>
    <string name="done">Done</string>

    <string name="plugin_name">TTW</string>

    <string-array name="patternNames">
        <item>One long</item>
        <item>Two long</item>
        <item>Three long</item>
        <item>One short</item>
        <item>Two short</item>
        <item>Three short</item>
        <item>One very short</item>
    </string-array>

    <string-array name="patternValues">
        <item>0,500</item>
        <item>0,500,50,500</item>
        <item>0,500,50,500,50,500</item>
        <item>0,200</item>
        <item>0,200,50,200</item>
        <item>0,200,50,200,50,200</item>
        <item>0,100</item>
    </string-array>

    <string name="custom">Custom</string>
    <string name="title">Tasker Tap Wear</string>
    <string name="intro">This app is a Tasker plugin to trigger a vibration pattern on the wearable device only, for a discreet notification tap where a popup is not required.\n\nTo use it create a new Tasker task and add TTW from the plugins.  You\'ll be able to change the type of vibration tap within the configuration screen.\n\nIf you are using an Android Wear 2 device please ensure you install the wear app from the Play Store on your watch.</string>
    <string name="hide_launcher">Hide launcher icon</string>
    <string name="vibrate_pattern">Vibrate pattern</string>
    <string name="save_pattern">Save</string>
    <string name="cancel_pattern">Cancel</string>
    <string name="try_pattern">Try</string>
    <string name="tap_pattern">Tap a pattern</string>

    <string name="no_watch_app_title">Watch app not installed</string>
    <string name="no_watch_app_description">Watch companion is not installed. This app will not work properly.\n\nIf your watch is running Android Wear 1.x, then you do not have to do anything, app will be installed automatically in few minutes at most.\n\nIf your watch is running Android Wear 2, please click \'Open Store\' button below to open Play Store on the watch and install companion app.</string>
    <string name="no_watch_app_button">Open store</string>
    <string name="no_watch_app_remote_error">Play Store Request Failed. Wear device(s) may not support Play Store, that is, the Wear device may be version 1.0.</string>
</resources>
